@@ -869,7 +869,7 @@ retained, possibly temporariliy, because it might be used internally."
                "ADJUST-LIST"
                "%FIND-PACKAGE-OR-LOSE" "FIND-UNDELETED-PACKAGE-OR-LOSE"
                "SANE-PACKAGE"
-               "CYCLIC-LIST-P"
+               "MAYBE-CYCLIC-P"
                "COMPOUND-OBJECT-P"
                "SWAPPED-ARGS-FUN"
                "AND/TYPE" "NOT/TYPE"
