@@ -8,6 +8,8 @@ changes in sbcl-0.9.17 (0.9.99?) relative to sbcl-0.9.16:
     for a type now works.
   * bug fix: loading of default sysinit file works. (thanks to Leonid
     Slobodov)
+  * bug fix: better detection of circularities in the file-compiler.
+    (reported by Marco Monteiro)
 
 changes in sbcl-0.9.16 relative to sbcl-0.9.15:
   * feature: implemented the READER-METHOD-CLASS and
